cache nextSubchunkDistanceSq minor changes